plugins {
    id "java-library"
    id "idea"
    id "maven-publish"
    id "net.neoforged.gradle.userdev" version "7.0.182"
}

version = "${project.mcVersion}-${project.modVersion}"
group = "com.teamabnormals"

base {
    archivesName = project.modId
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

runs {
    configureEach {
        systemProperty "forge.logging.markers", "REGISTRIES"
        systemProperty "forge.logging.console.level", "debug"
    }
    client {
        modSources {
            add project.sourceSets.main
        }
    }
    server {
        modSources {
            add project.sourceSets.main
        }
    }
    data {
        modSources {
            add project.sourceSets.main
        }
        arguments.addAll "--mod", "berry_good", "--all", "--output", file("src/generated/resources/").getAbsolutePath(), "--existing", file("src/main/resources/").getAbsolutePath(), "--existing-mod", "blueprint"
    }
}

sourceSets.main.resources {
    srcDir "src/generated/resources"
}

dependencies {
    implementation "net.neoforged:neoforge:${project.neoforge}"
    implementation("com.teamabnormals:blueprint:${project.mcVersion}-${project.blueprint}")

    compileOnly("mezz.jei:jei-${project.mcVersion}-neoforge-api:${project.jei}")
    runtimeOnly("mezz.jei:jei-${project.mcVersion}-neoforge:${project.jei}")
}

subsystems {
    parchment {
        minecraftVersion = "${project.mcVersion}"
        mappingsVersion = "${project.parchment}"
    }
}

repositories {
    maven { url "https://maven.teamabnormals.com/" }
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://modmaven.dev" }
}

tasks.named("jar", Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : project.modName,
                "Specification-Vendor"    : "Team Abnormals",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.modName,
                "Implementation-Version"  : project.modVersion,
                "Implementation-Vendor"   : "Team Abnormals",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}